--- a/Properties/CommonBuild.props
+++ b/Properties/CommonBuild.props
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" InitialTargets="CheckProductNameIsDefined">
+
+  <Target Name="CheckProductNameIsDefined">
+    <Error
+        Text="Product name is not defined. Ensure that the property 'ProductName' is defined."
+        Condition="'$(ProductName)'==''"
+    />
+  </Target>
 
   <!-- Top-level output file directory depends on whether or not there needs to be a separation by platform. -->
   <PropertyGroup Condition="'$(BuildSettingsPlatformCombinedOutput)'==''">
