Improve log messaging around auto-generated rules and add functionality to automatically clean up any created temporary directories when the process terminates.

--- a/Pathwinder.vcxproj
+++ b/Pathwinder.vcxproj
@@ -116,6 +116,7 @@
   <ItemGroup>
     <ClCompile Include="Source\ApiWindows.cpp" />
     <ClCompile Include="Source\DirectoryOperationQueue.cpp" />
+    <ClCompile Include="Source\DllMain.cpp" />
     <ClCompile Include="Source\FileInformationStruct.cpp" />
     <ClCompile Include="Source\FilesystemDirector.cpp" />
     <ClCompile Include="Source\FilesystemDirectorBuilder.cpp" />
